Recover Pack200.java and Main.java classes from history.
Ready repository for inclusion of OpenJDK JTREG tests.